*Added form names on the pt files for selenium testing. Added padding on the  breadcrumbpane to start work on the long string wrapping issue
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@21155 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenModel/skins/zenmodel/zenoss.css
+++ b/Products/ZenModel/skins/zenmodel/zenoss.css
@@ -256,12 +256,13 @@ span.searchform-label {
 
 #breadCrumbPane {
 	color: #000;
-	font-size: 10pt;
+	font-size: 9pt;
     height: 25px;
     line-height: 25px;
     padding-top: 0px;
 	padding-bottom: 5px;
     padding-left: 120px;
+    padding-right: 180px;
 	margin: 0px;
 	font-weight: bold;
 	border: medium none;
